--- a/jenkins/pipelines/Jenkinsfile
+++ b/jenkins/pipelines/Jenkinsfile
@@ -23,7 +23,12 @@ pipeline {
             script {
                 openshift.withCluster() {
                     openshift.withProject("load-testing") {
-                        echo "Using project: ${openshift.project()}"
+                      hook = registerWebhook()
+
+                      echo "Waiting for POST to ${hook.getURL()}"
+                      data = waitForWebhook hook
+                      echo "Webhook called with data: ${data}"
+                      echo "Using project: ${openshift.project()}"
                     }
                 }
             }
