--- a/jenkins/pipelines/Jenkinsfile
+++ b/jenkins/pipelines/Jenkinsfile
@@ -23,12 +23,12 @@ pipeline {
             script {
                 openshift.withCluster() {
                     openshift.withProject("load-testing") {
-                      hook = registerWebhook()
+                   //   hook = registerWebhook()
 
-                      echo "Waiting for POST to ${hook.getURL()}"
-                      data = waitForWebhook hook
-                      echo "Webhook called with data: ${data}"
-                      echo "Using project: ${openshift.project()}"
+                   //   echo "Waiting for POST to ${hook.getURL()}"
+                  //    data = waitForWebhook hook
+                  //    echo "Webhook called with data: ${data}"
+                   //   echo "Using project: ${openshift.project()}"
                     }
                 }
             }
