--- a/jenkins/pipelines/Jenkinsfile
+++ b/jenkins/pipelines/Jenkinsfile
@@ -69,6 +69,7 @@ pipeline {
         script {
             openshift.withCluster() {
                 openshift.withProject() {
+                  sh "pwd; ls -ltr; tree"
                  perfReport sourceDataFiles: "auto-perf-test/jenkins/request.jtl", compareBuildPrevious: true, modePerformancePerTestCase: true, modeOfThreshold: true, relativeFailedThresholdPositive: 50, relativeUnstableThresholdNegative: 40, relativeUnstableThresholdPositive: 40
  
       //            openshift.newApp(templatePath) 
