--- a/jenkins/pipelines/Jenkinsfile
+++ b/jenkins/pipelines/Jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
             openshift.withCluster() {
                 openshift.withProject() {
                   sh "pwd; ls -ltr; tree"
-                 perfReport sourceDataFiles: "auto-perf-test/jenkins/request.jtl", compareBuildPrevious: true, modePerformancePerTestCase: true, modeOfThreshold: true, relativeFailedThresholdPositive: 50, relativeUnstableThresholdNegative: 40, relativeUnstableThresholdPositive: 40
+                 perfReport sourceDataFiles: "jenkins/request.jtl", compareBuildPrevious: true, modePerformancePerTestCase: true, modeOfThreshold: true, relativeFailedThresholdPositive: 50, relativeUnstableThresholdNegative: 40, relativeUnstableThresholdPositive: 40
  
       //            openshift.newApp(templatePath) 
                 }
